--- a/foto.css
+++ b/foto.css
@@ -48,7 +48,7 @@ h1 {
 }
 .closeIcon img:hover {
 	background-color: rgba(255, 255, 255, 0.2);
-	
+	animation: pulsate 1s ease-in-out;
 }
 .closeIcon img {
 	border-radius: 12px;
@@ -85,6 +85,13 @@ a {
 	margin-bottom: 30px;
 	justify-content: center;
 }
+
+@keyframes pulsate {
+	0% {
+		box-shadow: 0 0 25px #5ddcff, 0 0 50px #4e00c2;
+	}
+}
+/* Responsive */
 @media (max-width: 350px) {
 	.img-box img {
 		height: 200px;
